<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/permissionsFragment"
        android:icon="@drawable/ic_shield"
        android:title="@string/nav_permissions" />

    <item
        android:id="@+id/locationsFragment"
        android:icon="@drawable/ic_location"
        android:title="@string/nav_locations" />

    <item
        android:id="@+id/rulesFragment"
        android:icon="@drawable/ic_rules"
        android:title="@string/nav_rules" />

</menu>
